--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
 Django==1.3.1
-distribute==0.6.24
-psycopg2==2.4.4
-wsgiref==0.1.2
-ajaxuploader==0.2.1
-boto==2.1.1
-mpyq==0.2.0
+PIL==1.1.7
 South==0.7.3
-pil==1.1.7
+ajaxuploader==0.2.1
+amqplib==1.0.2
+anyjson==0.3.1
+boto==2.1.1
+celery==2.5.1
+distribute==0.6.24
+django-celery==2.5.1
+django-dowser==0.1
+django-kombu==0.9.4
+django-picklefield==0.2.0
+kombu==2.1.2
+mpyq==0.2.0
+psycopg2==2.4.4
+python-dateutil==1.5
+virtualenv==1.7
+virtualenvwrapper==3.0
+wsgiref==0.1.2
