Install from the sc2reader repository using pip.
Removes the vendor folder and the old sc2reader code around with it.
pip install -r requirements.txt will now install tracking the s2gs
branch (at least until we merge it into master).

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ mpyq==0.2.0
 psycopg2==2.4.4
 python-dateutil==1.5
 wsgiref==0.1.2
+-e git://github.com/GraylinKim/sc2reader.git@s2gs#egg=sc2reader
