deal with heroku getting rid of settings injection

--- a/example.env
+++ b/example.env
@@ -8,9 +8,7 @@ S3_REPLAY_BUCKET=
 S3_MINIMAP_BUCKET=
 
 # Configure Database Integration
-POSTGRES_DBNAME=ggtracker_dev
-POSTGRES_USER=
-POSTGRES_PWORD=
+DATABASE_URL=postgres://user:pword@localhost:5432/ggtracker
 
 # Configure Rails Environment
 # having $PORT seems to be required for heroku
